# FreeSWITCH-ASR

./: Makefile  Makefile.am  Makefile.in  README.md  mod_asr.cpp  mod_asr.la  mod_asr.vcxproj  mod_asr_la-mod_asr.lo
libs/nlsSdk/demo/: sdkDemo.cpp  srDemo  srSyncDemo  stDemo  stSyncDemo  syDemo
